# httpstatus

./: README.md  main.py  pyproject.toml
httpstatus/: __init__.py  __main__.py  cli.py
